--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next-themes": "^0.4.6",
     "pino-pretty": "^13.0.0",
     "react": "^19.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.0",
     "react-markdown": "^9.0.3",
@@ -67,8 +68,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.1.6",
+    "@types/react-copy-to-clipboard": "^5.0.7",
+    "@types/react-dom": "^19.1.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
